[gd_scene load_steps=30 format=3 uid="uid://byqwrxtmyt6ql"]

[ext_resource type="Texture2D" uid="uid://c4i8g6inr645q" path="res://art/Character spritesheets/the guy/the guy.png" id="1_hpyxm"]
[ext_resource type="Script" path="res://scripts/character.gd" id="1_tsvs4"]
[ext_resource type="Texture2D" uid="uid://de114upjslulx" path="res://art/Character spritesheets/the guy/Right-Sideways-guy1-sheet.png" id="3_7j5o5"]
[ext_resource type="Texture2D" uid="uid://cwo8klrmqcb4n" path="res://art/Character spritesheets/the guy/the guy walking-sheet.png" id="3_gunpy"]
[ext_resource type="Texture2D" uid="uid://btt12jfiyqha7" path="res://art/Character spritesheets/the guy/the guy up idle.png" id="3_pqy8k"]
[ext_resource type="Texture2D" uid="uid://vr0502el1pev" path="res://art/Character spritesheets/the guy/Left-Sideways-guy1-sheet-sheet.png" id="5_35v0i"]
[ext_resource type="Texture2D" uid="uid://cy436emcu3h7g" path="res://art/Character spritesheets/the guy/the guy behind walking1-sheet-sheet.png" id="7_qk2ia"]
[ext_resource type="Texture2D" uid="uid://d12o3rc4nnlpt" path="res://art/Weapons/wood sword 1.png" id="8_e344q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vbbgd"]
atlas = ExtResource("1_hpyxm")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyxsg"]
atlas = ExtResource("1_hpyxm")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ulv"]
atlas = ExtResource("3_gunpy")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_woams"]
atlas = ExtResource("3_gunpy")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x68y"]
atlas = ExtResource("3_gunpy")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh1ul"]
atlas = ExtResource("3_gunpy")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lws4"]
atlas = ExtResource("3_7j5o5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ofco"]
atlas = ExtResource("3_7j5o5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn3sh"]
atlas = ExtResource("5_35v0i")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p013p"]
atlas = ExtResource("5_35v0i")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgvrc"]
atlas = ExtResource("3_pqy8k")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdji0"]
atlas = ExtResource("3_pqy8k")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni7uo"]
atlas = ExtResource("7_qk2ia")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aufx5"]
atlas = ExtResource("7_qk2ia")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxuep"]
atlas = ExtResource("7_qk2ia")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk50r"]
atlas = ExtResource("7_qk2ia")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ncipj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbbgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyxsg")
}],
"loop": true,
"name": &"down idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ulv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woams")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x68y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh1ul")
}],
"loop": true,
"name": &"down walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lws4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ofco")
}],
"loop": true,
"name": &"side idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn3sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p013p")
}],
"loop": true,
"name": &"side walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgvrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdji0")
}],
"loop": true,
"name": &"up idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni7uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aufx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxuep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk50r")
}],
"loop": true,
"name": &"up walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k6git"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_led8w"]

[sub_resource type="Animation" id="Animation_v8f5i"]
resource_name = "Wood sword down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00181474, 0.253459, 0.497239),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, 2), Vector2(0, 7), Vector2(-9, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00181474, 0.257693, 0.498448),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.733249, 2.287, 3.91652]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_21a2q"]
_data = {
"Wood sword down": SubResource("Animation_v8f5i")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_tsvs4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -5)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_ncipj")
animation = &"down idle"

[node name="dashTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k6git")

[node name="combat_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="combat_hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_led8w")

[node name="sword sprites" type="Sprite2D" parent="."]
position = Vector2(6, 2)
rotation = 0.733249
scale = Vector2(0.8, 0.701)
texture = ExtResource("8_e344q")

[node name="sword" type="AnimationPlayer" parent="sword sprites"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_21a2q")
}

[node name="weapon_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="dashTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="combat_hitbox" to="." method="_on_combat_hitbox_body_entered"]
[connection signal="body_exited" from="combat_hitbox" to="." method="_on_combat_hitbox_body_exited"]
[connection signal="timeout" from="weapon_cooldown" to="." method="_on_weapon_cooldown_timeout"]
